REST api compete, fix bugs and tests